# Mancrop

./: .gitignore  install.py  pyproject.toml
download/: __init__.py  download.py  download_queue.py  page_download.py
error_handler/: __init__.py
log/: __init__.py
modules/: chapter.py  page.py
src/download/: __init__.py  download_def.py  download_queue.py  page_download.py  test_download.py  test_download_queue.py  test_page_download.py
src/error_handler/: __init__.py  handler.py
src/log/: mancrop_log.py
src/mancrop/: __init__.py
src/modules/: chapter.py  manga.py
src/plugins/: msource_def.py  plugins_def.py  plugins_manager.py  test_plugins_manager.py
src/utils/: __init__.py  string_normalize.py
utils/: circular_queue.py  print_utils.py
