[tool.poetry]
name = "mancrop"
version = "0.1.0"
description = ""
authors = ["徐铭 <xumingxs@qq.com>"]
license = "MIT"
readme = "README.md"
packages = [
    { include = "download" },
    { include = "error_handler" },
    { include = "log" },
    { include = "modules" },
    { include = "utils" },
]



[tool.poetry.dependencies]
python = "^3.12"
aiohttp = "3.9.5"
rich = "13.7.1"
crawlee = {extras = ["playwright"], version = "^0.1.0"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
