[project]
name = "mancrop"
version = "0.1.0"
authors = ["徐铭 <xumingxs@qq.com>"]
license = "MIT"
description = ""
readme = "README.md"
requires-python = ">=3.12"
packages = [
    { include = "download" },
    { include = "error_handler" },
    { include = "log" },
    { include = "modules" },
    { include = "utils" },
]

dependencies = [
    "aiohttp>=3.10.5",
    "crawlee[playwright]>=0.3.4",
    "rich>=13.8.0",
]
